implemented single country search

--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,25 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  color: rgba(31, 31, 31, 0.979);
-  background: rgb(204, 204, 204);
+  background: rgb(32, 32, 32);
+  padding: 10px;
+  color: red;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.confirmed {
+  color: rgb(250, 250, 75);
+}
+
+.recovered {
+  color: rgb(47, 255, 64);
+}
+
+.critical {
+  color: rgb(212, 0, 0);
+}
+
+.deaths {
+  color: rgb(148, 34, 255);
+}
+
+td {
+  font-weight: bold;
 }
