fixed landing page routes

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,25 @@ td {
   font-weight: bold;
 }
 
+body {
+  background: #0f2027; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to bottom,
+    #2c5364,
+    #203a43,
+    #0f2027
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    #2c5364,
+    #203a43,
+    #0f2027
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  width: 100vw;
+  height: 100vh; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
 /* Landing Page */
 .wrapper {
   color: white;
@@ -76,4 +95,11 @@ li {
   color: white;
   letter-spacing: 0.5px;
   background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* NavBar */
+.navbar {
+  background-color: rgba(0, 0, 0, 0.4);
+  color: white;
+  margin: 0px;
 }
