--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+body {
+  width: 100%;
+  height: 100%; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  font-family: reality;
+}
+@font-face {
+  font-family: "reality";
+  src: local("reality"), url(./fonts/reality.otf) format("truetype");
+}
 .confirmed {
   color: rgb(250, 250, 75);
 }
@@ -16,25 +25,6 @@
 
 td {
   font-weight: bold;
-}
-
-body {
-  background: #0f2027; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to bottom,
-    #2c5364,
-    #203a43,
-    #0f2027
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to bottom,
-    #2c5364,
-    #203a43,
-    #0f2027
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-  width: 100vw;
-  height: 100vh; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 /* Landing Page */
@@ -99,7 +89,47 @@ li {
 
 /* NavBar */
 .navbar {
-  background-color: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  top: 0;
+  overflow: hidden;
+  width: 100%;
+  max-height: 8.5%;
+  background-color: rgba(0, 0, 0, 0.3);
+  display: flex;
+  justify-content: center;
+}
+
+.navContent {
+  max-height: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.logo {
+  max-height: 60px;
+  height: 60px;
+  width: 10%;
+  padding: 0px;
+}
+
+.navLinks {
+  font-size: x-large;
+  color: rgb(146, 0, 0);
+  text-shadow: 1.5px 1.2px rgb(255, 255, 255);
+}
+
+.navLinks:hover {
+  text-decoration: none;
   color: white;
-  margin: 0px;
+  text-shadow: 1.5px 1.2px rgb(0, 0, 0);
+}
+
+.navLinks:visited {
+  text-decoration: none;
+}
+
+.main {
+  margin-top: 7%; /* change this later */
 }
