--- a/src/index.css
+++ b/src/index.css
@@ -102,15 +102,18 @@ li {
 .navContent {
   max-height: 100%;
   height: 100%;
-  display: flex;
+  /* display: flex;
   justify-content: space-evenly;
+  align-items: center; */
+  display: grid;
   align-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .logo {
   max-height: 60px;
   height: 60px;
-  width: 10%;
+  width: 20%;
   padding: 0px;
 }
 
